# ChangeLog for net-analyzer/munin
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/ChangeLog,v 1.133 2013/01/23 19:22:41 flameeyes Exp $

*munin-2.0.10-r2 (23 Jan 2013)

  23 Jan 2013; Diego E. Pettenò <flameeyes@gentoo.org> +munin-2.0.10-r2.ebuild,
  -munin-2.0.10-r1.ebuild, -munin-2.0.10.ebuild, -munin-2.0.9-r1.ebuild,
  files/munin-node_init.d_2.0.7:
  Add a 1.5s wait on the munin init script to solve a possible race condition
  with munin-asyncd.

*munin-2.1.9999 (19 Jan 2013)
*munin-2.0.10-r1 (19 Jan 2013)

  19 Jan 2013; Diego E. Pettenò <flameeyes@gentoo.org> +munin-2.0.10-r1.ebuild,
  +munin-2.1.9999.ebuild, files/munin-asyncd.init.2:
  Add a new revision which uses tmpfilesd instead of a local.start script,
  changing all runtime paths to /run directly; munin-asyncd had its pidfile
  mandated by the init script so change it for all of them as well; add a live
  GIT ebuild for 2.1 series, where none of our patches are needed (all merged
  in).

*munin-2.0.10 (10 Jan 2013)

  10 Jan 2013; Diego E. Pettenò <flameeyes@gentoo.org> +munin-2.0.10.ebuild:
  Version bump.

  31 Dec 2012; Diego E. Pettenò <flameeyes@gentoo.org> munin-2.0.9-r1.ebuild:
  Make sure to create /var/run/munin on pkg install. Fixes bug #449438.

*munin-2.0.9-r1 (30 Dec 2012)

  30 Dec 2012; Diego E. Pettenò <flameeyes@gentoo.org> +munin-2.0.9-r1.ebuild,
  -munin-2.0.9.ebuild, files/munin-1.3.2-plugins.conf:
  Bump to fix the mailman plugin paths (bug #448414 by Juan David Ibáñez
  Palomar).

  23 Dec 2012; Diego E. Pettenò <flameeyes@gentoo.org> -files/logrotate.d-munin,
  -files/munin-1.3.3-crontab, -files/munin-1.4.4-Makefile.patch,
  -files/munin-1.4.6-apc-multi.patch, -files/munin-1.4.6-apc-temp.patch,
  -files/munin-1.4.6-fix-asterisk-plugins.patch,
  -files/munin-1.4.6-if_-hardened-v2.patch,
  -files/munin-1.4.6-if_-hardened.patch,
  -files/munin-1.4.6-munin-version-identifier.patch, -files/munin-asyncd.init,