@@ -11,21 +11,24 @@ AUX munin.apache.include 604 SHA256 5051ff79220e5ef578e6e5fa66ef8b0a71b72cca6fde
 AUX munin.apache.include-2.4 577 SHA256 21245e9eb7b759d2d2e65c2d1424da6d8c6fd8f49ec2f30cf72696cfc4227694 SHA512 b07791a4d5b822b5d0ad84ddbea3444cc1475cee8ee20f62dbb5f3a1792b71dba995e412433d30b3c295e40ad5346528d25e04438ec2dfa535983aae9198cea4 WHIRLPOOL 90a166f400e8336792fabcbcb786169dc5ed6b5fe9151ac5aef40f85c8d3f2724a6fffe17e41d90f31948a9462fc619fe45747caf8f62d55f6d494d48a7a2bb1
 DIST munin-2.0.10-gentoo-1.tar.xz 11688 SHA256 8e7e77d056b687bc0fd588274b7da9bad8682446374d92d82cb622580eb7e590 SHA512 7b4fbabe9303ea18659c408d34c310036761fc4c79f0beca06eb3715938347f8b6684dcbf53ed2051d60eb9e625872f05f5c574892e79abdb3c331b78a1dcf8b WHIRLPOOL a9dd95b9c3b69e43af4b083abe80bd6c2858c78bc1c64827bac18d4b24628ca6aa4948aece74a407a454eaa252a81d482ac4c0c1fd91768e1c2fef7698d67df2
 DIST munin-2.0.10.tar.gz 1330859 SHA256 ba5339607a584ae5fa5c2a35de452f024574ea2558ebde4a4feee95f1ff219af SHA512 7976c9bf00c213270baec7c0832fdec50b7560006ed1a738ac4dcb33068c1bdf9dbd7f70a4e970d06121bb637e2c54f2e90a7a52d343c1ed75f5129888ba575d WHIRLPOOL 27e1196ffc288de5064c48175b7b739aa8a12164c1a300912953f666dde825a16deed120a3b8b19151496df4ed4b42b10581455963eb6218b8960e053f5a5eb3
+DIST munin-2.0.11-gentoo-1.tar.xz 10888 SHA256 d7d909fdff948fd1b22b1e1e5cd395192feca8baf91d6af6c4b4710ca2c880ea SHA512 5b83dfe33902b38d4abf28700c777748ee3a47b8f3e1886f34abe5bd5822e688a4812ec03955d045a4ac82ae3fd680fb501495cef33e803d39b5e859a18e8fbf WHIRLPOOL fed07a1bf307bf6c44424a1771a66b8ab5435611c41778d65eb01395655eed4190ee7896cd406a63c67be691fa0cf46b1dd1daf7a876071942659047b2175653
+DIST munin-2.0.11.tar.gz 1331664 SHA256 c6365c981ab7f57f842aebd912b601cd6130eb0076391d217e2f5b26466a3935 SHA512 e5ba2fc4161615979938a936f4eb34616ad9eeb9e3c3fcd72dd43c96e51a4a3f66098d201c87a09c77d2f33d69a8a0324ff2402034d12a2ddf6b892d01e10935 WHIRLPOOL 309d7310d225c0da89df5b6264f8a804e70cb0fdaf89676c491b924cbbb1095913ffebc901b314f2a99b6f72af1ec6083d9a573cac5510974ad0cea688ef5d60
 DIST munin-2.0.8-patches-4.tar.xz 16600 SHA256 badd20ae9d7d74667b6a96764c8caaf156e34aa22be5bb08c10535270a99f3d3 SHA512 81084c9b46127f425c89ff76a0c807bbc36859b2fd7ac37734bd202cae92610333f4793aa4630595147d96ad9099da99283c7bcf107351d6ec4931e64451a415 WHIRLPOOL 7e7aed4f0e23f88b0fa2eba548af5573d3e1fab20a910a8568c641ae539c58acc9e020eec01a3323243d6f6ae6f69dd7200818df3a14b5ca3b7100557fc4c8dd
 DIST munin-2.0.8.tar.gz 1328805 SHA256 ae645daee35214c1ba3d771d990fa781df741751b7b79e9d9fe48c583890dca6 SHA512 f767e586aee68c389ce0ae250376bc43d6bfe73df8e193bb7ba8b373d887301e0c1d3574c3fe456be3b93dc86cc8ec8ce27e3c36836a0048b80afb55a3a3cc1e WHIRLPOOL 312f006c21af98f5d9e548a77d43fe7396dcc69072e06faedb3d8262e70599da91bfecdfd06e859d6ff8706506e73308cbcac38e658a28e428fd50399f3f3c3e
 EBUILD munin-2.0.10-r2.ebuild 11784 SHA256 6b987a4b28978bf49127260cd0f8676bfd3f6d71018063dd01b406e0a36b32de SHA512 938c38ab8b6cc8b14a0cdf8c701cb381cf148df6791ed2760dd27ee8abfdff092cb1364559d04ae2332f8c6ace4c8f2bb4f085e1492b75c81cacf57454309d7f WHIRLPOOL 54190d873d4c67e0d1923bbc1ced3e4acf2ca8f727f4a3365e708117f9a56bc98f67ecff44ba328d911585715cd1df389d8cad603a669edb1c582b3aa8a9c621
+EBUILD munin-2.0.11.ebuild 11781 SHA256 9eb1440962bf8f789a43fd49f468f2b48162636667894914d81f8549409a107e SHA512 34f8a506aff3e10c235f0eba8bb624c877f66035b25a0d2c8b1589d7c231aac4e598aa7e387ec852fbf2fe78b9727973076394dab6d5f38d4b4c5fa56880f528 WHIRLPOOL bce63ca622089732a86f27921c3daa664ab6194a3297e3ebc717eba51c9498b36f415f89e685007d0a1d16da84dffd4a787e794af11a5893baa0f4901eb9db40
 EBUILD munin-2.0.8-r2.ebuild 11318 SHA256 d37a81dbb917c080a95715b94a59323788122134950687007359f01a670e2910 SHA512 e63dc6a07ccb81c03ede5b0a3707c59818e1f5fa1e6a4c81195d48747093666384ad2f2a059d14afeaf2179bc126e01aecfce9d24852be4aa1c24d3fc7421e5f WHIRLPOOL 1d59a9da10590b8cd659d1df4bb81d1e926191450034f867b61e27c47f11fde4c30abfcb7632aa26c205a126b26f75420528ea13c9253f8bbcd7b039aa5c2452
 EBUILD munin-2.1.9999.ebuild 11572 SHA256 c7b0b7164268e6dced4a6c57a7725925ab639bfbf4a010bb0f345bac2533f296 SHA512 bbb13b562cc49965d6d2f821127987cbca7f92cbede7eaaf104dc69a28d211950add95d65fad67c721628578cec3e82a808aef6c6fbaf32a2a9b114551e390ca WHIRLPOOL ce77ad52beabf8189d707fd3d0d3273e5c5bac380f1095868805e01f18dcc2c40125e795cadf8c873950dc23048cae7b46f663cdb83c1228c65cfe47c25137da
-MISC ChangeLog 29672 SHA256 d161de8bb4c3a6547178c791278b2b2deaaf6c16714ad2f0af2a71e83287d59a SHA512 f7b8c88b03e35e85b5474da9f6784231c00196062c27c81bb2e66ba373c630f837676fa2a639f8ebe8f1ee040f68684149fda9b713dc274870bf218e58953eee WHIRLPOOL 910423e4d6fd423de4c1686aa77a1fdc04abc9e0e6e56d515b13c092fb278d95135e383e0d4832fcfab1c3edcdeee53d5d6bea52ee4f9a2e0c1576ae33e0e15c
+MISC ChangeLog 29796 SHA256 e3cd3b504d8e7ec0590baf7caff1f85e694f1abf07f7078e22908c850cc5fde0 SHA512 36f64157fec44d1b85c715dfb68c6937bfe35719e75a9befb3770d6d94a852a6d4ebbb85fe8ef73f714e6e0dfb0c4a2111f057420f3a2bc82d5d0bfc16e47150 WHIRLPOOL a98b32e41953c488427ac8a1d24d6c427644ed075fba6609a9697d81da33a2214bab7318010ea761b062a6a8d43924ce73d1b374b16e89d3497fea39f60d508a
 MISC metadata.xml 3824 SHA256 5b838f6ccb778750cbcc41052480daaa9ebcbee5ee38ab66b054472b6313d177 SHA512 277f3ab9589982617b60ce8ea63802288dc4ff5368416a942f3670804a8e0a4cd481b2d0ff91302be040d2aba4f66a2e11b0c181164e6285dc33b150b263da60 WHIRLPOOL 7486ffd90f12e32a9feb557b4937397317cfd4325e5ffdf1dbaa749a90f3c47f797baea306585ac4a200e4a23901da1de10a9f0b951a15bd27f8a7c876c504a5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRADiQAAoJEBzRPIrUMBNCsaUH/3UNTSO3pxjVk+qC9F7MzVsI
-Q48XPiuXjDsCjRDrZpInVSi49QaYU1/yJv9GGZfCeysWGoPZljvwH943T/UTMH1I
-uSDVdQn9oztnFeC74uRUC3P40mpL+62jkQyR4U1s6TWrV5AbUiRqSWcRqJb3WfmZ
-0tHvbLphBCFvJwm0UUJfwwCwKAPSPII2xYereoCa5X3jTvRObROI/QK4wGv5iC+R
-nmfLa2sIXdKtcUBsGKuNe4IMZTPU2YafCZNjblnIP1vD9qt/ahq8zg5s4H1AM1z6
-SbNYKjRxLGalBsRh+mstFYdjoaf2LdVeTsQxG3k0xRYvVrdGSxT3TUfFXFc7ezA=
-=5uNf
+iQEcBAEBCAAGBQJRC+qoAAoJEBzRPIrUMBNCQ8EIAJEjgmLbcfcr+EKljeEHqSCO
+HDwOFYsccNeF+J8WgOi1HGaWIm6FW8RG+O59xq7NdctK0ZmnVbXnAe58ssVfubgE
+u/65wMIc9j20FplEYFd716M4Hh+dhMSARj7pz2NYQoZsB/tKRPrNctHz90+AQ0Hb
+HZ3nZZGjV8TzmtTVzJADzat+ZOUGpRTj7vsHyML1iA2CGxV/RuNkG/LezfIr3ip0
+ATF/QrP0bH/8ZAmT/hClH8f2I4BBLTn/bKqmuJ0KyFjsIGs5oRUduAfS8J8DIS1y
+uX2WCr31jv3CnU9v9N750v2Ni0SVX7uoC6zlgnG00WLDqMIVhqBXoUuXQkkiKNQ=
+=PwcC
 -----END PGP SIGNATURE-----
