@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/munin
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/ChangeLog,v 1.133 2013/01/23 19:22:41 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/munin/ChangeLog,v 1.134 2013/02/01 16:16:30 flameeyes Exp $
+
+*munin-2.0.11 (01 Feb 2013)
+
+  01 Feb 2013; Diego E. Pettenò <flameeyes@gentoo.org> +munin-2.0.11.ebuild:
+  Version bump.
 
 *munin-2.0.10-r2 (23 Jan 2013)
 
